--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
         }
         nav ul { list-style: none; padding: 0; margin: 0; }
         nav ul li { margin: 8px 0; }
-        nav ul li a { color: white; text-decoration: none; }
+        nav ul li a { color: rgb(243, 242, 242); text-decoration: none; }
         nav ul li a:hover { text-decoration: underline; }
 
         main {
@@ -32,7 +32,7 @@
     <nav>
         <h2>Mailand IM</h2>
         <ul>
-            <li><a href="brst/brst.html">Brukerstøtte</a></li>
+            <li><a href="Konseptutv og Program/konsept og program.html">Konseptutv og Program</a></li>
             <li><a href="tekfor/tekfor.html">Teknologiforståelse</a></li>
             <li><a href="yff/yff.html">YFF</a></li>
             <li><a href="cv.html">Eksempel CV</a></li>
